# megalap

./: .gitignore  CMakeLists.txt  LICENSE  PUBLISHING.md  README.md  README_PYPI.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.py  benchmark_threads.py  render_showcase.py
python/megalap/: __init__.py
src/: core.cpp
tests/: test_smoke.py
